# mvncdf

./: README.md  main.py  mvn_jax.py  mvn_qmc.py  mvn_scipy.py  mvn_tf.py  mvn_torch.py  pyproject.toml
data/: elapsed_times.json  results.json
notebooks/: mvn_bernoulli.ipynb  plot_results.ipynb
