[project]
name = "mvncdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.6.2",
    "numpy>=2.1.3",
    "scipy>=1.15.3",
    "tensorflow>=2.19.0",
    "tensorflow-probability>=0.25.0",
    "tf-keras>=2.19.0",
]
